--- a/scripts/config
+++ b/scripts/config
@@ -27,8 +27,6 @@ pciaudiobusid=
 ## QEMU options
 RAM=
 CORES=
-MACOS_RAM=4G
-MACOS_CORES=4
 
 ## Hugepages
 HUGEPAGES=
@@ -45,17 +43,12 @@ EVENTMOUSE=
 usb1_vendorid=0x
 usb1_productid=0x
 
-## Network
-TAP_INTERFACE=tap0
-TAP_IP="10.10.10.1/24"
-DNSMASQ_CONF="${BASH_SOURCE%/*}/dnsmasq.conf"
-SMB_CONF="${BASH_SOURCE%/*}/smb.conf"
-
 ## Log file
 LOG=
 
 ## Local path for storage
 IMAGES=
+FIRMWARE=
 
 ## VBIOS
 VBIOS=$IMAGES/VBIOS.rom
@@ -66,12 +59,10 @@ OVMF=/usr/share/ovmf/x64/OVMF_CODE.fd
 OVMF_VARS=/usr/share/ovmf/x64/OVMF_VARS.fd
 
 ## MacOS
-MACOS_ISO=$IMAGES/iso/mojave.iso
-MACOS_IMG=$IMAGES/mojave.qcow2
-MACOS_CLOVER=$IMAGES/clover.qcow2
-MACOS_OVMF=$IMAGES/MACOS_OVMF_CODE.fd
-MACOS_OVMF_VARS=$IMAGES/MACOS_OVMF_VARS.fd
-MACOS_OPTIONS="+pcid,+ssse3,+sse4.2,+popcnt,+aes,+xsave,+avx,+xsaveopt,avx2,+smep,check"
+MACOS_ISO=$IMAGES/iso/BaseSystem.img
+MACOS_ESP=$IMAGES/macos/ESP.qcow2
+MACOS_OVMF_CODE=$FIRMWARE/OVMF_CODE.fd
+MACOS_OVMF_VARS=$FIRMWARE/OVMF_VARS-1024x768.fd
 
 ## Ulimit
 ULIMIT=$(ulimit -a | grep "max locked memory" | awk '{print $6}')
